# document-intelligence-refinery

./: .gitignore  README.md  pyproject.toml
.refinery/: extraction_ledger.jsonl
rubric/: extraction_rules.yaml
scripts/: generate_sample_artifacts.py
src/agents/: __init__.py  auditor.py  chunker.py  extractor.py  indexer.py  query_agent.py  triage.py
src/models/: __init__.py  document_profile.py  extracted_document.py  ldu.py  page_index.py  provenance.py
src/storage/: __init__.py  fact_table.py  vector_store.py
src/strategies/: __init__.py  base.py  fast_text.py  layout_aware.py  vision_augmented.py
tests/: test_chunker.py  test_extraction_confidence.py  test_indexer.py  test_query_agent.py  test_triage.py
