[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "document-intelligence-refinery"
version = "0.1.0"
description = "Production-grade agentic pipeline for enterprise document extraction"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "10Academy FDE Program" }]

dependencies = [
    # Core schemas & validation
    "pydantic>=2.6,<3",

    # PDF extraction — Strategy A
    "pdfplumber>=0.11",
    "pymupdf>=1.24",          # fitz — page rasterisation for Strategy C

    # Layout extraction — Strategy B
    "docling>=2.0",           # IBM Research document understanding

    # HTTP client for OpenRouter API — Strategy C
    "httpx>=0.27",

    # YAML config loading
    "pyyaml>=6.0",

    # Tokenisation (chunking engine)
    "tiktoken>=0.7",

    # Language detection
    "langdetect>=1.0.9",

    # Vector store (Stage 3 — referenced in config)
    "chromadb>=0.5",
    "sentence-transformers>=3.0",

    # LangGraph (Stage 5 query agent)
    "langgraph>=0.2",
    "langchain-core>=0.3",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "ruff>=0.4",
    "mypy>=1.10",
    "types-pyyaml",
    "pytest-mock>=3.14",
]

[project.scripts]
refinery-triage = "src.cli:triage_cli"
refinery-extract = "src.cli:extract_cli"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.11"
strict = false
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v --tb=short"
